Update overflow image and ensure it never scales larger than screen size.

--- a/app/styles/dwhp.scss
+++ b/app/styles/dwhp.scss
@@ -33,5 +33,11 @@ a {
   .app-background {
     background: #004890 url("/images/overflow-background.jpg") no-repeat center center;
     background-size: cover;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    overflow: auto;
   }
 }
